--- a/src/assets/css/scss/base/_variable.scss
+++ b/src/assets/css/scss/base/_variable.scss
@@ -1,10 +1,14 @@
 //顏色變數
 $mainColor:#644d31;
-
+$grey:rgb(56, 55, 55);
 //注區顏色
-$betArea_yellow:#ffd236;
-$betArea_red:#bd0505;
-$betArea_border:gray;
+$betArea_yellow:#E1BD33;
+$betArea_red:#F44224;
+$betArea_border:#347553;
+$betArea:#206548;
+$betArea_infoBar:#164531;
+$btnlist_coin:#271604;
+
 
 //注意這裡的路徑要放引用的SCSS檔案的相對路徑
 //網站圖片
