--- a/src/assets/css/scss/components/_buttom.scss
+++ b/src/assets/css/scss/components/_buttom.scss
@@ -12,7 +12,7 @@
 	touch-action: manipulation;
 	cursor: pointer;
 	font-size: 136%;
-	font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
+	// font-family: 'cwtexhei', 'Varela Round', '微軟正黑體', sans-serif;
 	text-decoration: none;
 	color: #fff6d5;
 	padding:5px 0px;
@@ -54,6 +54,7 @@
 	// transition: 1s;
 }
 .header-btn.active,.header-btn:active{
+	padding:5px;
 	background-image:none;
 	outline:0;
 	-webkit-box-shadow:inset 0 3px 5px rgba(0,0,0,.125);
