--- a/src/assets/css/scss/components/_loading.scss
+++ b/src/assets/css/scss/components/_loading.scss
@@ -1,5 +1,5 @@
 .LoadingPage{
-    background-image: $loading-img;
+    // background-image: $loading-img;
     background-position: center center;
     background-repeat: no-repeat;
     background-color: #644d31;
