--- a/src/assets/css/scss/base/_base.scss
+++ b/src/assets/css/scss/base/_base.scss
@@ -1,7 +1,9 @@
+@import url(https://fonts.googleapis.com/earlyaccess/cwtexyen.css);
 html,body{
 	height: 100%; margin: 0; padding: 0;
 }
 body{
+	font-family: 'cwTeXYen', sans-serif;
 	padding: 0px;
 	background-color: #000;
 	background-image: $body-bg-img;
