--- a/src/assets/css/scss/components/_bettingArea.scss
+++ b/src/assets/css/scss/components/_bettingArea.scss
@@ -17,6 +17,7 @@
         display: none;
     }
     .bettingArea-betInfo{
+        background-color: $betArea_infoBar;
         p{
             margin-bottom: 0;
         }
@@ -26,14 +27,11 @@
             }
         }
     }
-    .gameresult{
-        top:25%;
-    }
     .bettingArea-btn{
         height:65px;
         width:100%;
-        background-color: #1e1e1e;
-        border-top:gray 1px solid;
+        background-color: $btnlist_coin;
+        border-top:black 1px solid;
     }
     .bettingArea-btn-left{
         width: 100%;
@@ -44,17 +42,13 @@
         border-radius: 5px;
         cursor: pointer;
     }
-    .bettingArea-btn-gitbackAllCoin{
+    .bettingArea-btn-gitbackAllCoin,.bettingArea-btn-check{
         @extend %bettingArea-btn-base;
-        background-color: rgba(0, 0, 255, 0.692);
-    }
-    .bettingArea-btn-check{
-        @extend %bettingArea-btn-base;
-        background-color:rgba(128, 0, 128, 0.829);
+        background-color: #415BBB;
     }
     .bettingArea-btn-betInfo,.bettingArea-btn-reward{
         border-radius: 5px;
-        background-color: #644d31;
+        background-color: $betArea;
         font-size: 18px;
         text-align: center;
     }
@@ -62,7 +56,7 @@
         width:70px;
         height:42px;
         font-size: 1.5rem;
-        background-color:rgba(128, 0, 128, 0.829);
+        background-color:$betArea;
     }
     .bettingArea-btn-center{
         width:70px;
@@ -107,13 +101,14 @@
         }
     }
     .betArea-item{
-        font-weight:500;
+        font-weight: bold;
+        font-size: 2rem;
     }
     .betRatioText{
-        font-size: 1.5rem;
+        font-size: 0.8rem;
     }
     .askRoad-player,.askRoad-banker{
-        background-color: rgb(75, 73, 73);
+        background-color: black;
         border-radius: 5px;
         p{
             margin-bottom: 0;
@@ -123,11 +118,8 @@
             border-radius: 10px;
         }
     }
-    .askRoad-player{
-        color:red;
-    }
-    .askRoad-banker{
-        color:yellow;
+    .askRoad-banker,.askRoad-player{
+        color:rgb(231, 229, 229);
     }
     .shotCoinUl{  
         width:100%;
