--- a/src/assets/css/scss/components/_progressBar.scss
+++ b/src/assets/css/scss/components/_progressBar.scss
@@ -1,14 +1,37 @@
-.progress {
-    position: relative;
-    border: 5px solid #FFF;
-    width: 400px;
-    height: 20px;
-    overflow: hidden;
-    &.loaded { display: none;}
-    .progress-inset {
-      position: absolute;
-      top: 0; left: 0;
-      height: 100%;
-      background: #FFF;
-    }
-  }
+// .progress {
+//   position: relative;
+//   border: 5px solid #FFF;
+//   width: 400px;
+//   height: 20px;
+//   overflow: hidden;
+
+//   &.loaded {
+//     display: none;
+//   }
+
+//   .progress-inset {
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     height: 100%;
+//     background: #FFF;
+//   }
+// }
+.progressBar{
+  width:500px;
+  height:20px;
+  overflow: hidden;
+  border-radius: 50px;
+  box-shadow: 5px 5px 5px solid black;
+}
+progress {
+  color: #f00;
+  /* 表示已完成进度背景色 */
+  background: #EFEFF4;
+  /* 表示总长度背景色 */
+}
+
+progress::-webkit-progress-value {
+  background: #a21211;
+  border-radius: 0.2rem;
+}
