--- a/src/assets/css/scss/components/_progressBar.scss
+++ b/src/assets/css/scss/components/_progressBar.scss
@@ -22,8 +22,19 @@
   height:20px;
   overflow: hidden;
   border-radius: 50px;
-  box-shadow: 5px 5px 5px solid black;
+  border:3px solid white;
+  box-sizing: content-box;
+  animation:progressAnimation 2s linear infinite;
 }
+@keyframes progressAnimation {
+  from{
+    box-shadow: 0px 0px 10px rgb(0, 0, 0);
+  }
+  to{
+    box-shadow: 0px 0px 20px rgb(240, 206, 12);
+  }
+}
+
 progress {
   color: #f00;
   /* 表示已完成进度背景色 */
