--- a/src/assets/css/scss/components/_gameResult.scss
+++ b/src/assets/css/scss/components/_gameResult.scss
@@ -2,7 +2,8 @@
 .gameResult{
 	top:28%;
 	left:0;
-	background-color: #523e2544;
+	// background-color: #523e2544;
+	// background: linear-gradient(90deg,transparent 0%,#1136be 50%,transparent 100%);
 	text-align: center;
 }
 #result{
@@ -26,6 +27,7 @@
 	}
 }
 .gameResult-content{
-	@include flex-colum-content-center;
 	height:80%;
+	display: flex;
+	justify-content: center;
 }
