--- a/src/assets/css/scss/components/_loading.scss
+++ b/src/assets/css/scss/components/_loading.scss
@@ -1,14 +1,11 @@
 .LoadingPage{
-    // background-image: $loading-img;
-    // background-position: center center;
-    // background-repeat: no-repeat;
     background-color: #644d31;
     text-align: center;
     z-index: 10;
 }
 .gameResultLoading{
     top:35%;
-    background-color: #523e2544;
+    background:linear-gradient(90deg,transparent 0%,blue 50%,transparent 100%);
     z-index: 9;
     p{
         text-align: center;
