--- a/src/assets/css/scss/util/_util.scss
+++ b/src/assets/css/scss/util/_util.scss
@@ -85,6 +85,12 @@
 	color: #fff6d7;
 	line-height: 2em;
 }
+.font_white{
+    color:white;
+}
+.font_grey{
+    color:rgb(255, 254, 254)
+}
 .font
 .font-total{
 	color: gray;
